updated inevtory file

--- a/install_apache_webserver.yml
+++ b/install_apache_webserver.yml
@@ -4,6 +4,11 @@
   become: true
   tasks:
 
+  - name: update repository
+    yum:
+      update_cache: yes
+
   - name: install apache webserver
     yum:
       name: httpd
+      state: latest
