--- a/install_nginx.yml
+++ b/install_nginx.yml
@@ -14,6 +14,7 @@
   - name: installing epel-release
     yum:
       name: epel-release
+      state: latest
     when: ansible_distribution == "CentOS"
 
 
