--- a/commands.yml
+++ b/commands.yml
@@ -6,11 +6,12 @@
 
 
   - name: Running Following commands just for testing
-    shell: |
-       cd /root/bugx_wepapp
-       systemctl start bugx
-       cd /root
-       mkdir ansible_testing
-       cd /root/ansible_testing
-       touch tako 
-       ll /root/bugx_wepapp > tako
+  command: “{{item}}”
+  with_items:
+  - cd /root/bugx_wepapp
+  - systemctl start bugx
+  - cd /root
+  - mkdir ansible_testtako
+  - cd /root/ansible_testing
+  - touch tako 
+  - ll /root/bugx_wepapp > tako
