--- a/commands.yml
+++ b/commands.yml
@@ -14,4 +14,6 @@
     - mkdir ansible_testtako
     - cd /root/ansible_testing
     - touch tako 
-    - ll /root/bugx_wepapp > tako
+    - ls -l /root/bugx_wepapp > tako
+    register: reg_out
+    – debug: msg=”{{ reg_out.results | map (attribute=’stdout_lines’) | list }}”
