--- a/commands.yml
+++ b/commands.yml
@@ -6,15 +6,11 @@
 
 
   - name: Running Following commands just for testing
-    command: “{{item}}”
-    with_items:
-    - cd /root/bugx_wepapp
-    - systemctl start bugx
-    - cd /root
-    - mkdir ansible_testtako
-    - cd /root/ansible_testing
-    - touch tako 
-    - ls -l /root/bugx_wepapp > tako
-    register: command_result
-  - debug: 
-      msg: "{{ command_result.stdout_lines }}"
+    command: “{{ item }}”
+    loop:
+      - cd /root/bugx_wepapp
+      - systemctl start bugx
+      - cd /root
+      - mkdir ansible_testtako
+      - cd /root/ansible_testing
+      - touch tako
