added new .yml file

--- a/commands.yml
+++ b/commands.yml
@@ -8,9 +8,9 @@
     shell:
        "dnf -y config-manager --set-enabled powertools"
    
-  - name: cowsay
+  - name:  install build dependencies
     shell: 
-       "echo "powertools enabled succesfully"|cowsay"
-    
+       "yum install -y git-core zlib zlib-devel gcc-c++ patch readline readline-devel libyaml-devel libffi-devel openssl-devel make bzip2 autoconf automake libtool bison curl sqlite-devel"
+
       
         
