added new .yml file

--- a/commands.yml
+++ b/commands.yml
@@ -11,6 +11,10 @@
   - name:  install build dependencies
     shell: 
        "yum install -y git-core zlib zlib-devel gcc-c++ patch readline readline-devel libyaml-devel libffi-devel openssl-devel make bzip2 autoconf automake libtool bison curl sqlite-devel"
-
+  
+  - name: clonning rbenv repos from github
+    shell: |
+       "git clone https://github.com/rbenv/rbenv.git"
+       "git clone https://github.com/rbenv/ruby-build.git ~/.rbenv/plugins/ruby-build" 
       
         
