--- a/commands.yml
+++ b/commands.yml
@@ -13,8 +13,8 @@
        "yum install -y git-core zlib zlib-devel gcc-c++ patch readline readline-devel libyaml-devel libffi-devel openssl-devel make bzip2 autoconf automake libtool bison curl sqlite-devel"
   
   - name: clonning rbenv repos from github
-    shell: |
-       "git clone https://github.com/rbenv/rbenv.git"
-       "git clone https://github.com/rbenv/ruby-build.git ~/.rbenv/plugins/ruby-build" 
+    shell:
+       cmd: "git clone https://github.com/rbenv/rbenv.git"
+       cmd: "git clone https://github.com/rbenv/ruby-build.git ~/.rbenv/plugins/ruby-build" 
       
         
