--- a/commands.yml
+++ b/commands.yml
@@ -14,10 +14,12 @@
   
   - name: clonning rbenv repos from github
     shell:
-       cmd: "git clone https://github.com/rbenv/rbenv.git"
-       cmd: "git clone https://github.com/rbenv/ruby-build.git ~/.rbenv/plugins/ruby-build" 
+       "git clone https://github.com/rbenv/rbenv.git"
     args:
       chdir: /root 
-      
+    shell:
+       "git clone https://github.com/rbenv/ruby-build.git ~/.rbenv/plugins/ruby-build" 
+    
+
       
         
