--- a/commands.yml
+++ b/commands.yml
@@ -19,7 +19,7 @@
 
   - name: report if directory exist
     debug:
-      msg: "The directory exist"
+      msg: "The directory /root/rbenv exist, skipping to next task"
     when: file_data.stat.exists
 
   - name: clonning rbenv repos from github
@@ -36,13 +36,17 @@
 
   - name: report if file exist
     debug:
-      msg: "The directory exist"
+      msg: "The directory /root/.rbenv/plugins/ruby-build exist, skipping to next task"
     when: ruby_file.stat.exists
   
   - name: clonnig ruby-build.git repo and forward it to ~/.rbenv/plugins/ruby-build
     shell:
        "git clone https://github.com/rbenv/ruby-build.git ~/.rbenv/plugins/ruby-build" 
-    when: not ruby_file.stat.exists
+    when: not ruby_file.stat.exists\
+
+  - name: Building environment for rbuy
+    shell:  
+       "echo 'export PATH="$HOME/rbenv/bin:$HOME/.rbenv/bin:$HOME/.rbenv/plugins/ruby-build/bin:$PATH"' >> ~/.bashrc"
     
 
       
