--- a/commands.yml
+++ b/commands.yml
@@ -46,7 +46,7 @@
 
   - name: Building environment for rbuy
     shell:  
-       "echo 'export PATH="$HOME/rbenv/bin:$HOME/.rbenv/bin:$HOME/.rbenv/plugins/ruby-build/bin:$PATH"' >> ~/.bashrc"
+       echo 'export PATH="$HOME/rbenv/bin:$HOME/.rbenv/bin:$HOME/.rbenv/plugins/ruby-build/bin:$PATH"' >> ~/.bashrc
     
 
       
