--- a/commands.yml
+++ b/commands.yml
@@ -47,7 +47,7 @@
   - name: Building environment for rbuy
     shell:  
        echo 'export PATH="$HOME/rbenv/bin:$HOME/.rbenv/bin:$HOME/.rbenv/plugins/ruby-build/bin:$PATH"' >> ~/.bashrc
-    
-
+       echo 'eval "$(rbenv init -)"' >> ~/.bashrc 
+      
       
         
