--- a/commands.yml
+++ b/commands.yml
@@ -44,10 +44,12 @@
        "git clone https://github.com/rbenv/ruby-build.git ~/.rbenv/plugins/ruby-build" 
     when: not ruby_file.stat.exists
 
+ 
   - name: Building environment for rbuy
     shell:  
        echo 'export PATH="$HOME/rbenv/bin:$HOME/.rbenv/bin:$HOME/.rbenv/plugins/ruby-build/bin:$PATH"' >> ~/.bashrc
        echo 'eval "$(rbenv init -)"' >> ~/.bashrc 
-      
+       source ~/.bashrc
+    when: PATH != '$HOME/rbenv/bin:$HOME/.rbenv/bin:$HOME/.rbenv/plugins/ruby-build/bin:$PATH'
       
         
