--- a/commands.yml
+++ b/commands.yml
@@ -45,7 +45,7 @@
     when: not ruby_file.stat.exists
 
   - name: searching string
-    resgister: env
+    register: env
     shell: 
        "cat /.bashrc"
  
