--- a/commands.yml
+++ b/commands.yml
@@ -51,8 +51,8 @@
  
   - name: Building environment for rbuy
     shell:  
-       echo 'export PATH="$HOME/rbenv/bin:$HOME/.rbenv/bin:$HOME/.rbenv/plugins/ruby-build/bin:$PATH"' >> ~/.bashrc'
-    when: ' "$HOME/rbenv/bin:$HOME/.rbenv/bin:$HOME/.rbenv/plugins/ruby-build/bin:$PATH" in not env.stdout'
+       echo 'export PATH="$HOME/rbenv/bin:$HOME/.rbenv/bin:$HOME/.rbenv/plugins/ruby-build/bin:$PATH"' >> ~/.bashrc
+    when: '"$HOME/rbenv/bin:$HOME/.rbenv/bin:$HOME/.rbenv/plugins/ruby-build/bin:$PATH" in not env.stdout'
     
   - debug:
       msg: "varibale exist"
