--- a/commands.yml
+++ b/commands.yml
@@ -47,7 +47,7 @@
   - name: searching string
     lineinfile: 
       name: /root/.bashrc
-      line: "$HOME/rbenv/bin:$HOME/.rbenv/bin:$HOME/.rbenv/plugins/ruby-build/bin:$PATH"
+      line: "$HOME/rbenv/bin:$HOME/.rbenv/bin:$HOME/.rbenv/plugins/ruby-build/bin:$PATH \n eval $(rbenv init -)"
       state: absent
     check_mode: yes
     register: conf
@@ -55,9 +55,12 @@
   - name: Building environment for rbuy
     shell:  
        echo 'export PATH="$HOME/rbenv/bin:$HOME/.rbenv/bin:$HOME/.rbenv/plugins/ruby-build/bin:$PATH"' >> ~/.bashrc
+       echo 'eval "$(rbenv init -)"' >> ~/.bashrc
+       source ~/.bashrc
     when: conf is changed
     
   - debug:
       msg: "varibale exist"
     when: conf is not changed
+
         
