added new .yml file

--- a/commands.yml
+++ b/commands.yml
@@ -103,6 +103,7 @@
 
   - name: clonnig bugx webapp files
     ansible.builtin.git:
+      accept_hostkey: true
       repo: git@github.com:EshginGuluzade/bugx_wepapp.git
       dest: /root
     when: not bugx_data.stat.exists
