added new .yml file

--- a/commands.yml
+++ b/commands.yml
@@ -105,7 +105,7 @@
     ansible.builtin.git:
       accept_hostkey: true
       repo: git@github.com:EshginGuluzade/bugx_wepapp.git
-      dest: /root
+      dest: /root/
     when: not bugx_data.stat.exists
     
   
