--- a/commands.yml
+++ b/commands.yml
@@ -133,7 +133,7 @@
   - name: searching string
     lineinfile: 
       name: /home/brew-user/.bash_profile
-      line: "GEM_HOME=$HOME/.gem \n PATH=$PATH:$HOME/.gem"/bin \n PATH=$PATH:$HOME/.gem/ruby//bin" 
+      line: "GEM_HOME=$HOME/.gem \n PATH=$PATH:$HOME/.gem/bin \n PATH=$PATH:$HOME/.gem/ruby//bin" 
       state: absent
     check_mode: yes
     register: envvar
