added new .yml file

--- a/commands.yml
+++ b/commands.yml
@@ -149,8 +149,10 @@
       chdir: /home/brew-user/
  
   - name: giving permission to user for accesing /root/.rbenv/versions
-    shell:
-       "chown -R brew-user:brew-user /root/.rbenv/versions/" 
+    shell: |
+      chown -R brew-user:brew-user /root/.rbenv/versions/
+      chown -R brew-user:brew-user /Library/Ruby/Gems  
+      chown -R brew-user:brew-user /usr/local/*
     args:
       chdir: /root/
 
