added new .yml file

--- a/execbundle.yml
+++ b/execbundle.yml
@@ -8,5 +8,7 @@
   - name: bundle exec jekyll serve
     shell: 
        "bundle exec jekyll serve --host 0.0.0.0"
+    async: 20
+    poll: 4
     args:
       chdir: /root/bugx_wepapp/
