--- a/execbundle.yml
+++ b/execbundle.yml
@@ -8,7 +8,12 @@
   - name: bundle exec jekyll serve
     shell: 
        "bundle exec jekyll serve --host 0.0.0.0"
-    async: 20
-    poll: 4
+    async: 25
+    poll: 0
     args:
       chdir: /root/bugx_wepapp/
+
+  - name: creating bugx service
+    copy:
+      src: /root/bugx.service/
+      dest: /etc/systemd/system/    
