--- a/commands.yml
+++ b/commands.yml
@@ -182,14 +182,25 @@
       dest: /etc/systemd/system/
     when: not bugx_service.stat.exists
 
-
-  - name: adding httpd server and opening port number 4000 for service
+  - name: enable and start firewalld
     shell: |
       systemctl enable firewalld
       systemctl start firewalld
-      firewall-cmd --zone=public --add-service=http
-      firewall-cmd --reload
-      firewall-cmd --zone=public --permanent --add-port=4000/tcp
+
+  - name: permit traffic in default zone for http service
+    ansible.posix.firewalld:
+      service: http
+      permanent: yes
+      state: enabled
+
+  - name: permit traffic in default zone on port 4000/tcp
+    ansible.posix.firewalld:
+      port: 4000/tcp
+      permanent: yes
+      state: enabled
+
+  - name: reload firewalld
+    shell: |
       firewall-cmd --reload
       systemctl restart firewalld
 
