modifed commands.yml file

--- a/commands.yml
+++ b/commands.yml
@@ -151,12 +151,11 @@
  
   - name: giving permission to user for accesing /root/.rbenv/versions
     shell: |
-      chown -R brew-user:brew-user /root/.rbenv/versions/*
+      chown -R brew-user:brew-user /root/.rbenv/versions/
       chown -R brew-user:brew-user /Library/Ruby/Gems/*
       chown -R brew-user:brew-user /usr/local/*
       bundle update --bundler
-    args:
-      chdir: /root/
+    
 
 
   - name: installing bundle as a brew-user 
