--- a/commands.yml
+++ b/commands.yml
@@ -165,6 +165,7 @@
        "su -c 'bundle install' brew-user"
     args:
       chdir: /root/bugx_wepapp/
+    tags: tag2
 
   - name: bundle exec jekyll serve
     shell: 
@@ -173,6 +174,7 @@
     poll: 0
     args:
       chdir: /root/bugx_wepapp/
+    tags: tag3
 
   - name: checking existance of bugx.service
     stat:
