--- a/try.yml
+++ b/try.yml
@@ -8,23 +8,7 @@
   - name: Replace between the expressions
   ansible.builtin.replace:
   path: /etc/nginx/nginx.conf
-  regexp: ' listen       80 default_server;
-        listen       [::]:80 default_server;
-        server_name  _;
-        root         /usr/share/nginx/html;
-
-        # Load configuration files for the default server block.
-        include /etc/nginx/default.d/*.conf;
-
-        location / {
-        }
-
-        error_page 404 /404.html;
-            location = /40x.html {
-        }
-
-        error_page 500 502 503 504 /50x.html;
-            location = /50x.html {'
+  regexp: ' listen       80 default_server; listen       [::]:80 default_server;  server_name  _; root /usr/share/nginx/html;# Load configuration files for the default server block. include /etc/nginx/default.d/*.conf;location / { } error_page 404 /404.html;location = /40x.html {}error_page 500 502 503 504 /50x.html;location = /50x.html {'
     tags: tag1
 
             
